# aws-capture-auto

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: capture_excel_config.json  captures.json  excel.json  template.xlsx
src/: __init__.py  aws_capture.py  aws_login.py  aws_resource.py  capture_automation.py  image_to_excel.py  main.py
